update auto-common